# workpods_agent

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml
docs/architecture/: architecture-diagram.md
docs/raw/: claude_code_memory_arch.md  continie_learning_for_agent.md  memory.md  mintliffy_blog.md
notebook/: gemini.ipynb  geocoding.ipynb  graph.ipynb  invoke_research.ipynb  opportunity_id.ipynb  qdrant.ipynb  tavily.ipynb  version.ipynb
src/: agent.py
src/context/: context.py
src/llm/: llm_selector.py
src/middleware/: gate_tools.py  inject_context.py
src/middleware/auth_middleware/: middleware.py  state.py
src/middleware/filesystem_middleware/: config.py  middleware.py  prompt.py  schema.py  state.py  utils.py
src/middleware/gate_tools/: gate_tools.py
src/middleware/loop_detection/: __init__.py  middleware.py  state.py
src/middleware/pre_completion_check/: __init__.py  middleware.py  prompt.py  state.py
src/middleware/skills_middleware/: middleware.py  prompt.py  registry.py  schema.py  state.py
src/middleware/summarization/: __init__.py  middleware.py  prompt.py  state.py
src/middleware/todo/: middleware.py  prompt.py  state.py  write_todo_tool.py
src/prompt/: prompt.py
src/skills/comments/: SKILL.md
src/state/: schema.py  state.py  utils.py
src/subagents/: general.py  general_state.py  planner.py  registry.py  researcher.py  state.py  writer.py
src/tools/: TOOLS.md
src/utils/: skills_registry.py
src/whatsapp/: agent_client.py  webapp.py  whatsapp_client.py
(+165 files in other folders)
