[project]
name = "ada-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.6",
    "langgraph-api>=0.6.39",
    "langgraph-cli[inmem]>=0.4.11",
    "email-validator>=2.3.0",
    "pypdf>=6.6.0",
    "qdrant-client>=1.16.2",
    "tavily-python>=0.7.19",
    "langchain-google-genai>=4.2.0",
    "google-genai>=1.59.0",
    "pillow>=12.1.0",
    "boto3>=1.35.0", # For S3 image uploads
    "python-docx>=1.1.0", # Server-side DOCX generation (code interpreter strategy)
    "reportlab>=4.0", # Server-side PDF generation (code interpreter strategy)
    "geopy>=2.4.1",
    "langchain-daytona>=0.0.2",
    "langchain-anthropic>=1.3.1",
    "langgraph-sdk>=0.3.3",
]
